--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,28 @@
 <div style="position: relative;" id="wrapper">
   <mat-drawer-container>
-      <mat-drawer mode="over" opened style="width:350px;">
+      <mat-drawer mode="over" [opened]="openedSidebar" style="width:350px;">
           <mat-nav-list>
-              <a  routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }"><i class="bi bi-house-fill mx-3"></i>Dashboard</a>
-              <!-- <a *ngIf="myArray.includes('SUPER_ADMIN')" routerLinkActive="active" routerLink="accounts"><i class="bi bi-people-fill mx-3"></i>Accounts</a>
-              <a routerLinkActive="active"><i class="bi bi-grid-3x3-gap-fill mx-3"></i>Departments</a>    
+              <a routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }"><i class="bi bi-house-fill mx-3"></i>Dashboard</a>
+              <a routerLinkActive="active" routerLink="accounts"><i class="bi bi-people-fill mx-3"></i>Accounts</a>
+              <a routerLinkActive="active" routerLink="companies"><i class="bi bi-grid-3x3-gap-fill mx-3"></i>Companies</a>    
               <a routerLinkActive="active"><i class="bi bi-buildings-fill mx-3"></i>Premises</a>    
               <a routerLinkActive="active"><i class="bi bi-people-fill mx-3"></i>Guards</a>    
-              <a routerLinkActive="active"><i class="bi bi-people-fill mx-3"></i>Staff</a>     -->
+              <a routerLinkActive="active"><i class="bi bi-people-fill mx-3"></i>Staff</a>    
+              <a routerLinkActive="active" routerLink="login"><i class="bi bi-people-fill mx-3"></i>Login</a>    
+              <div *ngIf="user">
+                    <div class="d-flex align-items-center"  id="user-profile">
+                        <div class="user-img">
+
+                        </div>
+                        <div class="px-1">
+                            <h3 class="mb-0 dark-text">{{user.user}}</h3>
+                            <small class="light-text">, koki company</small>
+                        </div>
+                    </div>
+              </div>
             </mat-nav-list>
       </mat-drawer>
-      <mat-drawer-content class="p-4">
+      <mat-drawer-content style="overflow-x: hidden;">
           <!-- <div class="container-fluid">
               <div class="row">
                   <div class="d-flex text-align-center align-items-center justify-content-between">
@@ -29,7 +41,6 @@
           </div> -->
           <div class="row">
               <div class="col-md-3 col-lg-2" id="side-bar">
-                  <h1 style="margin-bottom: 0; font-size: 23px;font-weight: 700;cursor: pointer;" class="mb-0 logo" routerLink="dashboard">i<span style="color: #0BA5EC;">Guard</span></h1>
                   <!-- <div>
                      <ul style="list-style: none;color: #808080;">
                         <li routerLinkActive="active shadow"><a routerLink="/" >
@@ -60,8 +71,9 @@
                      </ul>
                   </div> -->
               </div>
-              <div class="col-md-9 col-lg-10">
-                  <router-outlet></router-outlet>
+              <div style="position: relative;padding-top: 2.5rem;">
+                <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: 1rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
+                <router-outlet></router-outlet>
               </div>
           </div>
       </mat-drawer-content>
