--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,44 @@
 #wrapper {
-    min-height: 100vh; 
+    min-height: 100vh;
+
+    mat-drawer-container {
+        position: relative;
+
+
+        mat-drawer {
+            position: fixed;
+            top: 0;
+            left: 0;
+
+            mat-nav-list {
+                display: flex;
+                flex-direction: column;
+
+                a {
+                    padding: 1rem;
+                    cursor: pointer;
+                    text-decoration: none;
+                }
+            }
+
+
+            #user-profile {
+                position: absolute;
+                bottom: 0;
+                width: 100%;
+                // height: 00px;
+                // background-color: red;
+                padding: 1rem;
+
+                .user-img {
+                    width: 60px;
+                    height: 60px;
+                    background-color: tomato;
+                    border-radius: 100%;
+                }
+            }
+        }
+    }
 
     
 }
