--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+     margin: 0; 
+     font-family: Roboto, "Helvetica Neue", sans-serif;
+     max-width: 100vw;
+     overflow-x: hidden;
+
+    .light-border {
+        border: 2px solid rgb(180, 180, 180)
+    }
+
+    .dark-border {
+        border: 2px solid black;
+    }
+
+
+    .light-text {
+        color: grey;
+    }
+
+    .dark-text {
+        color: #1f1f1f;
+    }
+
+
+
+
+
+}
