feature: add footer

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,6 +41,12 @@
                     right: 100px;
                 }
             }
+
+
+            #window {
+                height: calc(100vh);
+                overflow-y: scroll;
+            }
         }
 
 
