--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,9 @@
               <a routerLinkActive="active"><i class="bi bi-buildings-fill mx-3"></i>Premises</a>    
               <a routerLinkActive="active"><i class="bi bi-people-fill mx-3"></i>Guards</a>    
               <a routerLinkActive="active"><i class="bi bi-people-fill mx-3"></i>Staff</a>    
-              <a routerLinkActive="active" routerLink="login"><i class="bi bi-people-fill mx-3"></i>Login</a>    
+              <a routerLinkActive="active" routerLink="login"><i class="bi bi-people-fill mx-3"></i>Logout</a>    
               <div *ngIf="user">
-                    <div class="d-flex align-items-center"  id="user-profile">
+                    <div class="d-flex align-items-center" style="cursor: pointer;"  id="user-profile">
                         <div class="user-img">
 
                         </div>
@@ -71,12 +71,12 @@
                      </ul>
                   </div> -->
               </div>
-              <div style="position: relative;padding-top: 2.5rem;">
+              <div style="position: relative; overflow-y: scroll;padding-top: 2.5rem;" id="window">
                 <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: 1rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
                 <router-outlet></router-outlet>
+                <app-footer></app-footer>
 
                 <!-- notifications -->
-
 
                 <!--error notification -->
                 <div *ngIf="errorNotification" class="error msg mat-elevation-z8 light-text d-flex p-2">
