feature: style the company details page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
                      </ul>
                   </div> -->
               </div>
-              <div style="position: relative; overflow-y: scroll;padding-top: 2.5rem;" id="window">
+              <div style="position: relative; overflow-y: scroll;padding-top: 2.5rem;overflow-x: hidden;" class="px-0" id="window">
                 <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: 1rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
                 <router-outlet></router-outlet>
                 <app-footer></app-footer>
