--- a/src/app/pages/companies/companies.component.html
+++ b/src/app/pages/companies/companies.component.html
@@ -1,7 +1,54 @@
 <div class="container-fluid">
-    <div class="row">
+    <div class="row border-bottom-light px-3">
         <h1>Companies</h1>
     </div>
 
+    <div class="row" style="min-height: 96vh;">
+        <div class="col-md-2 border-right-light p-4">
+            <h2 class="dark-text mb-0">{{currentPremise.name}}</h2>
+            <small class="mb-0 light-text">{{currentPremise.narration}}</small>
+        </div>
+
+        <div class="col-md-10 px-0">        
+            <div class="row">
+                <div class="d-flex justify-content-between p-4 align-items-center">
+                    <div>
+                        <h3 style="font-weight: bold;" class="mb-0">Premise Companies</h3>
+                        <small class="light-text">Select company to view details</small>
+                    </div>
     
+                    <div class="flex-row-reverse">
+                      <input class="light-sm-border" type="text" matInput (keyup)="applyFilter($event)"  #input style="width: 200px;padding: .5rem;" placeholder="Search Company">
+                    </div>
+                </div>
+            </div>              
+            <div>                         
+                <table mat-table [dataSource]="dataSource" matSort>  
+            
+                
+                    <!-- Name Column -->
+                    <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                    </ng-container>
+                
+                    <!-- Fruit Column -->
+                    <ng-container matColumnDef="staff_count">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Staff  </th>
+                    <td mat-cell *matCellDef="let row"> {{row.staff_count}} </td>
+                    </ng-container>
+                
+                    <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
+                    <tr (click)="viewCompanyDetails(row.id)" mat-row style="height: 35px;cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
+                
+                    <!-- Row shown when there is no matching data. -->
+                    <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+                    </tr>
+                </table>
+                
+                <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+            </div>             
+        </div>
+    </div>    
 </div>
