--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
     <div class="row">
         <div class="row cards mt-2">
             <div class="card light-border shadow-sm" style="cursor: pointer;">
-                <div (click)="change()" class="d-flex h-100 justify-content-between align-items-center">
+                <div (click)="viewPremiseCompanies()" class="d-flex h-100 justify-content-between align-items-center">
                     <div class="rounded-full d-flex align-items-center justify-content-center" style="border-radius: 100%;width: 60px;height: 60px;background-color: #8ecae66c;">
                         <i  class="bi bi-grid-3x3-gap-fill" style="font-size: 1.5rem;color: #7ecff5;"></i>
                     </div>
@@ -71,7 +71,7 @@
         <div class="col-md-3 light-border px-0">
             <div class="row p-1">
                 <h2>Account Premises</h2>
-                <div class="p-1">
+                <div *ngIf="premises" class="p-1">
                     <div  class="premise rounded-1 shadow-sm px-3 py-3" [ngClass]="{'active':premise.premise_id === showingPremiseId}" *ngFor="let premise of premises;let i = index">
                         <p class="mb-0" style="color: #333333;"><span style="font-weight: bold;">{{i + 1}}. </span>{{premise.name}}</p>
                     </div>
@@ -89,14 +89,8 @@
         <div class="col-md-5 light-border">
             <h3>Appointments</h3>
             <div>
-                <div class="appointment shadow-sm my-3 p-3">
-                    <div>
-                        <p class="mb-0 dark-text">John Doe</p>
-                        <small class="light-text">Lorem ipsum dolor sit amet.</small>
-                    </div>
-                </div>
-
-                <div class="appointment shadow-sm my-3 p-3">
+                <p *ngIf="premiseAppointments.length === 0" class="mb-0">No appointments</p>
+                <div  *ngFor="let appointment of premiseAppointments" class="appointment shadow-sm my-3 p-3">
                     <div>
                         <p class="mb-0 dark-text">John Doe</p>
                         <small class="light-text">Lorem ipsum dolor sit amet.</small>
