--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,6 +11,11 @@ body {
         border: 2px solid rgb(228, 228, 228)
     }
 
+
+    .light-sm-border {
+        border: 1px solid rgb(228, 228, 228)
+    }
+
     .dark-border {
         border: 2px solid black;
     }
@@ -24,8 +29,33 @@ body {
         color: #1f1f1f;
     }
 
+    .border-bottom-light {
+        border-bottom: 2px solid rgb(228, 228, 228);
+    }
+
+    .border-top-light {
+        border-top: 2px solid rgb(228, 228, 228);
+    }
+
+    .border-right-light {
+        border-right: 2px solid rgb(228, 228, 228);
+    }
 
 
+    //table stylings 
+    .table-rows:nth-child(even) {
+        background: #ebebeb
+    }
 
 
+    .table-rows {
+        &:hover {
+            background-color: #e7e7e73d;
+        }
+    }
+
+
+    .mat-mdc-tab-body-content {
+        overflow-x: hidden!important;
+    }
 }
