feature: add back button functionality

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,7 +1,12 @@
 <div class="container-fluid light-border">
     <div class="row">
         <div>
-            <small class="light-text">iguard ©2023</small>
+            <ul class="d-flex gap-5 mb-0 light-text">
+               <li>© iguard 2023</li>
+               <li>Account term of use</li>
+               <li>General term of servicese</li>
+               <li>Cookie Policy</li>
+            </ul>
         </div>
     </div>
 </div>
