--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -5,4 +5,12 @@
     z-index: 20;
     background-color: #fefefe;
     padding: .5rem;    
+    left: 0;
+    right: 0;
+
+    ul {
+        li {
+            cursor: pointer;
+        }
+    }
 }
