--- a/src/app/pages/company/company.component.html
+++ b/src/app/pages/company/company.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row border-bottom-light px-3">
-        <h1>Companies</h1>
+        <h1 style="margin: 11px 0 16px 20px">Companies</h1>
     </div>
 
     <div class="row" style="min-height: 96vh;">
