--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -72,7 +72,8 @@
                   </div> -->
               </div>
               <div style="position: relative; overflow-y: scroll;padding-top: 2.5rem;overflow-x: hidden;" class="px-0" id="window">
-                <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: 1rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
+                <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: .8rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
+                <p class="light-text" (click)='navigationHistoryService.goBack()' style="cursor: pointer;font-size: 30px;position: absolute;top: 3.4rem;left: 2rem;"><i class="bi bi-arrow-left-square"></i></p>
                 <router-outlet></router-outlet>
                 <app-footer></app-footer>
 
