--- a/src/app/components/company/company-staff/company-staff.component.html
+++ b/src/app/components/company/company-staff/company-staff.component.html
@@ -9,7 +9,7 @@
 
         <ng-container matColumnDef="firstName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.first}} {{row.last}} </td>
+            <td mat-cell *matCellDef="let row"> {{row.first}} {{row.last}}</td>
         </ng-container>
     
         <ng-container matColumnDef="msisdn">
@@ -28,7 +28,7 @@
         </ng-container>
     
         <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row style="height: 35px;cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr (click)="viewStaffProfile(row.user_id)" mat-row style="height: 35px;cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
     
         <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
