--- a/src/app/pages/companies/companies.component.html
+++ b/src/app/pages/companies/companies.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row border-bottom-light px-3">
-        <h1>Companies</h1>
+        <h1 class="mx-5">Companies</h1>
     </div>
 
     <div class="row" style="min-height: 96vh;">
