--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row">
-        <h1>Dashboard</h1>
+        <h1 class="mx-5 mb-0">Dashboard</h1>
     </div>
 
     <div class="row">
