feature: style the staff-profile

--- a/src/app/pages/company/company.component.html
+++ b/src/app/pages/company/company.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row border-bottom-light px-3">
-        <h1 style="margin: 11px 0 16px 20px">Companies</h1>
+        <h1 class="mx-5 my-3">Company</h1>
     </div>
 
     <div class="row" style="min-height: 96vh;">
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="d-flex justify-content-between p-4 align-items-center">
                     <div>
-                        <h3 style="font-weight: bold;" class="mb-0">Premise Company</h3>
+                        <h3 style="font-weight: bold;" class="mb-0">Premise Companies</h3>
                         <small class="light-text">View company details</small>
                     </div>    
                 </div>
