--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
     <div class="row border-bottom-light px-3">
-        <h1>Staff</h1>
+        <h1 class="mx-5 my-3">Staff</h1>
     </div>
 
     <div class="row" style="min-height: 96vh;">
