--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -37,7 +37,7 @@
     
         
                     <ng-container matColumnDef="date">
-                        <th mat-header-cell *matHeaderCellDef mat-sort-header> date </th>
+                        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
                         <td mat-cell *matCellDef="let row"> {{row.checkin | date:'fullDate'}} </td>
                     </ng-container>
                 
