--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -23,8 +23,21 @@
         <div class="col-md-10 px-0">        
             <div class="row mx-0" style="max-width: 100%;">
                 <div class="p-3">
-                    <div class="p-2 light-sm-border" style="max-width: max-content;">
-                        <p style="cursor: pointer;" class="mb-0">Time period: <span>1st Jun - 31st Jul 2023</span><span><i class="bi bi-calendar4-week mx-2"></i></span></p>
+                    <div style="max-width: max-content;">
+                        <mat-form-field class="example-form-field">
+                            <mat-label>Enter a date range</mat-label>
+                            <mat-date-range-input [formGroup]="range"  [rangePicker]="rangePicker">
+                              <input matStartDate formControlName="start"  placeholder="Start date">
+                              <input matEndDate formControlName="end" placeholder="End date">
+                            </mat-date-range-input>
+                            <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
+                            <mat-date-range-picker #rangePicker>
+                              <mat-date-range-picker-actions>
+                                <button mat-button mat-button color="primary" matDateRangePickerCancel>Cancel</button>
+                                <button mat-raised-button (click)="submitDate()" color="primary" matDateRangePickerApply>Apply</button>
+                              </mat-date-range-picker-actions>
+                            </mat-date-range-picker>
+                        </mat-form-field>                        <!-- <p (click)="openDialog()" style="cursor: pointer;" class="mb-0">Time period: <span>1st Jun - 31st Jul 2023</span><span><i class="bi bi-calendar4-week mx-2"></i></span></p> -->
                     </div>
                 </div>
 
