--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,7 @@
                 position: fixed;
                 top: 150px;
                 right: 100px;
-                z-index: 20000;
+                z-index: 20000000;
                 height: 70px;
                 width: 300px;
                 animation: fadeIn .5s;
