--- a/src/app/components/premise/premise-beacons/premise-beacons.component.html
+++ b/src/app/components/premise/premise-beacons/premise-beacons.component.html
@@ -1,16 +1,23 @@
 <div>
     <div class="row p-2">
-        <div class="d-flex flex-row-reverse align-items-end">
-            <button class="mx-1 primary-btn" style="padding: .4rem;"  (click)="createStaff()">Add Staff</button>
-            <input class="light-sm-border" type="text" matInput (keyup)="applyFilter($event)"  #input style="width: 200px;padding: .5rem;" placeholder="Search Staff">
+        <div class="d-flex flex-row-reverse">
+            <button (click)="openDialog()" class="mx-1">Add Beacon</button>
+            <input class="light-sm-border" type="text" matInput (keyup)="applyFilter($event)"  #input style="width: 200px;padding: .5rem;" placeholder="Search Beacon">
         </div>
     </div>
-    <table mat-table [dataSource]="dataSource" matSort>
-        <ng-container matColumnDef="firstName">
+    <table mat-table [dataSource]="dataSource" matSort>  
+
+
+        <ng-container matColumnDef="Signature">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let row"> {{row.first}} {{row.last}}</td>
+            <td mat-cell *matCellDef="let row"> {{row.Signature}}</td>
         </ng-container>
-    
+
+        <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+            <td mat-cell *matCellDef="let row"> <span class="light-text">{{row.description}}</span></td>
+        </ng-container>
+<!--     
         <ng-container matColumnDef="msisdn">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone No.  </th>
             <td mat-cell *matCellDef="let row"> {{row.msisdn}} </td>
@@ -24,10 +31,10 @@
         <ng-container matColumnDef="designation">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Designation  </th>
             <td mat-cell *matCellDef="let row"> {{row.designation[0].name}} </td>
-        </ng-container>
+        </ng-container> -->
     
         <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
-        <tr (click)="viewStaffProfile(row.user_id)" mat-row style="height: 35px;cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row style="height: 35px;cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
     
         <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
@@ -36,3 +43,4 @@
     
     <mat-paginator [pageSizeOptions]="[13, 25]" aria-label="Select page of users"></mat-paginator>
 </div>
+
