--- a/src/app/pages/companies/companies.component.scss
+++ b/src/app/pages/companies/companies.component.scss
@@ -1,4 +1,17 @@
 .container-fluid {
     height: 96vh;
     padding-top: 1rem;
+
+    button {
+        border: 2px solid black;
+        background-color: transparent;
+        cursor: pointer;
+        transition: all ease .2s;
+    
+        &:hover {
+            background-color: yellow;
+            border: 2px solid yellow;
+
+        }
+    }
 }
