--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,4 +58,25 @@ body {
     .mat-mdc-tab-body-content {
         overflow-x: hidden!important;
     }
+
+
+    .primary-btn {
+        border: 2px solid black;
+        background-color: transparent;
+        cursor: pointer;
+        transition: all ease .2s;
+    
+        &:hover {
+            background-color: yellow;
+            border: 2px solid transparent;
+        }
+    }
+
+
+    .container-fluid {
+
+        .col-md-2 {
+            background-color: rgb(245, 245, 231)!important;
+        }
+    }
 }
