--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,8 +2,8 @@
     <div class="row" style="height: 80vh;">
         <div class="col-md-6 col-lg-5 pt-5 mx-auto" style="color: black;">
             <form [formGroup]="loginForm" class="mx-auto px-4 py-3" (submit)="onSubmit()">
-                <h3 class="text-center">Admin Login</h3>
-                <p class="text-center">Please enter your details</p>
+                <h2 class="text-center">Admin Login</h2>
+                <p class="text-center light-text">Please enter your details</p>
                 <div class="form-group mt-4">
                     <label for="username">Username</label>
                     <input (input)="clearError()" type="text" formControlName="username" class="form-control" name="username" id="username" placeholder="Username">
