--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -18,6 +18,11 @@
             <div class="d-flex align-items-center justify-content-center text-center">
                 <h2 class="mb-0 text-center mx-1"><i class="bi bi-clock-history mx-1"></i>264.00</h2><small>Total Hours</small>
             </div>
+
+            <div>
+                <button (click)="openAppointmentDialog()" class="mx-1" style="padding: .4rem;">Add Apointment</button>
+                <button (click)="openLeaveDialog()" class="mx-1" style="padding: .4rem;">Request Leave</button>
+            </div>
         </div>
 
         <div class="col-md-10 px-0">        
