--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -4,7 +4,7 @@
     width: 100%;
     z-index: 20;
     background-color: #fefefe;
-    padding: .5rem;    
+    padding: .5rem .5rem .5rem 300px;    
     left: 0;
     right: 0;
 
