--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="row" style="min-height: 96vh;">
-        <div class="col-md-2 border-right-light text-center px-0">
+        <div class="col-md-3 border-right-light text-center px-0">
             <div class="p-4 ">
                 <div class="row mt-1 mb-4">
                     <div class="mx-auto" style="height: 60px;width: 60px;background-color: tomato;border-radius: 100%;cursor: pointer;">
@@ -20,12 +20,12 @@
             </div>
 
             <div>
-                <button (click)="openAppointmentDialog()" class="mx-1" style="padding: .4rem;">Add Apointment</button>
+                <button (click)="openAppointmentDialog()" class="mx-1" style="padding: .4rem;">Add Appointment</button>
                 <button (click)="openLeaveDialog()" class="mx-1" style="padding: .4rem;">Request Leave</button>
             </div>
         </div>
 
-        <div class="col-md-10 px-0">        
+        <div class="col-md-9 px-0">        
             <div>
                 <div class="row mx-0" style="max-width: 100%;">
                     <div class="p-3">
@@ -39,8 +39,8 @@
                                 <mat-datepicker-toggle matIconSuffix [for]="rangePicker"></mat-datepicker-toggle>
                                 <mat-date-range-picker #rangePicker>
                                   <mat-date-range-picker-actions>
-                                    <button mat-button mat-button color="primary" matDateRangePickerCancel>Cancel</button>
-                                    <button mat-raised-button (click)="submitDate()" color="primary" matDateRangePickerApply>Apply</button>
+                                    <button class="btn"  matDateRangePickerCancel>Cancel</button>
+                                    <button class="btn" (click)="submitDate()"  matDateRangePickerApply>Apply</button>
                                   </mat-date-range-picker-actions>
                                 </mat-date-range-picker>
                             </mat-form-field>                        <!-- <p (click)="openDialog()" style="cursor: pointer;" class="mb-0">Time period: <span>1st Jun - 31st Jul 2023</span><span><i class="bi bi-calendar4-week mx-2"></i></span></p> -->
