--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,19 +2,34 @@
   <mat-drawer-container>
       <mat-drawer mode="side"  fixedInViewport fixedTopGap  fixedBottomGap opened style="width:300px;">
           <mat-nav-list>
-              <a routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }"><i class="bi bi-house-fill mx-3"></i>Dashboard</a>
-              <a routerLinkActive="active" routerLink="accounts"><i class="bi bi-people-fill mx-3"></i>Accounts</a>
-              <a routerLinkActive="active" (click)="viewPremiseCompanies()"><i class="bi bi-grid-3x3-gap-fill mx-3"></i>Companies</a>    
-              <a routerLinkActive="active" ><i class="bi bi-buildings-fill mx-3"></i>Premises</a>    
-              <a routerLinkActive="active" (click)="logout()"><i class="bi bi-box-arrow-left mx-3"></i>Logout</a>    
+              <a routerLinkActive="active" routerLink="dashboard" [routerLinkActiveOptions]="{ exact: true }">
+                <span><i class="bi bi-house-fill mx-3"></i></span>
+                Dashboard</a>
+              <a routerLinkActive="active" routerLink="accounts" >
+                <span><i class="bi bi-buildings-fill mx-3"></i></span>
+                Accounts</a>   
+              <a routerLinkActive="active" routerLink="companies" (click)="viewPremiseCompanies()">
+                <span><i class="bi bi-grid-3x3-gap-fill mx-3"></i></span>
+                Companies</a>    
+              <a routerLinkActive="active" routerLink="premises" >
+                <span><i class="bi bi-buildings-fill mx-3"></i></span>
+                Premises</a>   
+              <a routerLinkActive="active" routerLink="notifications" (click)="viewPremiseNotifications()">
+                <span><i class="bi bi-buildings-fill mx-3"></i></span>
+                Notifications</a>
+              <a routerLinkActive="active" routerLink="login" (click)="logout()">
+                <span><i class="bi bi-box-arrow-left mx-3"></i></span>
+                Logout</a>   
+              
+              
               <div *ngIf="user">
                     <div class="d-flex align-items-center" style="cursor: pointer;"  id="user-profile">
                         <div class="user-img">
 
                         </div>
-                        <div class="px-1">
+                        <div class="px-2">
                             <h3 class="mb-0 dark-text">{{user?.user}}</h3>
-                            <small class="light-text">, koki company</small>
+                            <small class="light-text">koki company</small>
                         </div>
                     </div>
               </div>
@@ -69,8 +84,7 @@
                      </ul>
                   </div> -->
               </div>
-              <div style="position: relative; overflow-y: scroll;padding-top: 2.5rem;overflow-x: hidden;" class="px-0" id="window">
-                <p (click)="toggleNavbar()" style="cursor: pointer;font-size: 30px;position: absolute;top: .8rem;left: 2rem;" class="mb-0"><i class="bi bi-list"></i></p>
+              <div style="position: relative;overflow-x: hidden;height: calc(100vh - (40px));padding-top: 2.5rem;" class="px-0" id="window">
                 <p *ngIf="user" class="light-text" (click)='navigationHistoryService.goBack()' style="cursor: pointer;font-size: 30px;position: absolute;top: 3.4rem;left: 2rem;"><i class="bi bi-arrow-left-square"></i></p>
                 <router-outlet></router-outlet>
                 <app-footer></app-footer>
