--- a/src/app/pages/staff-profile/staff-profile.component.html
+++ b/src/app/pages/staff-profile/staff-profile.component.html
@@ -26,7 +26,7 @@
         </div>
 
         <div class="col-md-9 px-0">        
-            <div>
+            <div *ngIf="userRole === 'ADMIN'">
                 <div class="row mx-0" style="max-width: 100%;">
                     <div class="p-3">
                         <div style="max-width: max-content;">
