--- a/src/app/pages/accounts/accounts.component.html
+++ b/src/app/pages/accounts/accounts.component.html
@@ -27,35 +27,21 @@
             <table mat-table [dataSource]="dataSource" matSort>  
 
     
-                <ng-container matColumnDef="date">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
-                    <td mat-cell *matCellDef="let row"> {{row.checkin | date:'fullDate'}} </td>
+                <ng-container matColumnDef="accountName">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+                    <td mat-cell *matCellDef="let row"> {{row.accountName}} </td>
                 </ng-container>
             
-                <ng-container matColumnDef="checkin">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkin  </th>
-                    <td mat-cell *matCellDef="let row"> {{row.checkin | date: 'shortTime'}} </td>
+                <ng-container matColumnDef="description">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
+                    <td mat-cell *matCellDef="let row"> {{row.description}} </td>
                 </ng-container>
 
 
-                <ng-container matColumnDef="checkout">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Checkout  </th>
-                    <td mat-cell *matCellDef="let row"> {{row.checkout | date: 'shortTime'}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="work_hrs">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Work Hours  </th>
-                    <td mat-cell *matCellDef="let row">hrs</td>
-                </ng-container>
-
-                <ng-container matColumnDef="status"> 
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-                    <td mat-cell *matCellDef="let row"> 
-                        <span *ngIf="row.status === 'pending'"><i style="color: rgb(204, 5, 5);" class="mx-1 bi bi-x-circle"></i></span>
-                        <span *ngIf="row.status === 'started'"><i style="color: rgb(105, 167, 12);" class="mx-1 bi bi-hourglass-top"></i></span>
-                        <span *ngIf="row.status === 'ended'"><i style="color: rgb(204, 201, 4);" class="mx-1 bi bi-check2-circle"></i></span>
-                        {{row.status}} </td>
-                </ng-container>
+                <ng-container matColumnDef="msisdn">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Phone No.</th>
+                    <td mat-cell *matCellDef="let row"> {{row.msisdn}} </td>
+                </ng-container>         
 
                 <tr mat-header-row class="border-bottom-light border-top-light light-text" *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row style="cursor: pointer;" class="table-rows" *matRowDef="let row; columns: displayedColumns;"></tr>
