--- a/src/app/pages/company/company.component.scss
+++ b/src/app/pages/company/company.component.scss
@@ -1,11 +1,13 @@
-// .primary-btn {
-//     border: 2px solid black;
-//     background-color: transparent;
-//     cursor: pointer;
-//     transition: all ease .2s;
 
-//     &:hover {
-//         background-color: yellow;
-//         border: 0;
-//     }
-// }
+button {
+    border: 2px solid black;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all ease .2s;
+    padding: .4rem;
+
+    &:hover {
+        background-color: yellow;
+        border: 2px solid transparent;
+    }
+}
